...
  readonly testID?: string;
}

export function BookmarkButton({
  isBookmarked,
  onPress,
  testID = 'news-resource-bookmark',
}: BookmarkButtonProps) {
  const {colors} = useNiaTheme();

  return (
    <Pressable
      accessibilityRole="button"
...
