appId: com.nowinandroidrn.demo
---
- launchApp:
    clearState: true
- runFlow: ../subflows/wait-for-foryou-feed.yaml
- scrollUntilVisible:
    element:
      id: newsResourceCard:1
    direction: DOWN
    timeout: 10000
- tapOn:
    id: news-resource-bookmark
    below:
      id: newsResourceCard:1
- extendedWaitUntil:
    visible:
      id: bookmarkNote:skip
    timeout: 5000
- tapOn:
    id: bookmarkNote:skip
- scrollUntilVisible:
    element:
      id: newsResourceCard:2
    direction: DOWN
    timeout: 10000
- tapOn:
    id: news-resource-bookmark
    below:
      id: newsResourceCard:2
- extendedWaitUntil:
    visible:
      id: bookmarkNote:skip
    timeout: 5000
- tapOn:
    id: bookmarkNote:skip
- tapOn:
    id: tab:bookmarks
- extendedWaitUntil:
    visible:
      id: bookmarks:feed
    timeout: 10000
- longPressOn:
    id: newsResourceCard:1
- assertVisible:
    id: bookmarks:bulk-remove
- tapOn:
    id: bookmarks:bulk-remove
- assertVisible:
    id: bookmarks:undo
- tapOn:
    id: bookmarks:undo
- extendedWaitUntil:
    visible:
      id: newsResourceCard:1
    timeout: 10000
- assertVisible:
    id: newsResourceCard:2
